# console_assistant

./: Dockerfile  address_book.py  commands_docs.py  commands_t9.py  main.py  notes.py  pyproject.toml  requirements.txt  sort_folder.py  weather.py
